2008-06-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Fix current frame
	  selection.

2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Fixes in backtrace
	  handling.

2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: When the
	  Modified event of a project is fired, update the whole tree only if
	  it is a change of the base directory. Fixes bug #395670 - Every
	  addition to the current project crashes MD.
	* MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Made ITreeNavigator more
	  reliable against tree changes. Every method now checks if the
	  internal iterator is valid, and if it is not, it tries to get a new
	  one.

2008-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/CombineDescriptor.cs,
	  MonoDevelop.Ide.Templates/SolutionItemDescriptor.cs,
	  MonoDevelop.Ide.Templates/ProjectTemplate.cs,
	  MonoDevelop.Ide.Templates/ISolutionItemDescriptor.cs,
	  MonoDevelop.Ide.Templates/ProjectDescriptor.cs: Split solution item
	  creation in two steps: creation of the instance, and
	  initialization. In this way the new project dialog can create a new
	  instance of the project to check availability of features without
	  having to expand the whole template.
	* MonoDevelop.Ide.Gui.Pads.ClassPad/CombineNodeBuilder.cs: Fix node
	  label.
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs: When adding a
	  project to an existing solution, always use the solution's format.
	  Skip the 'project features' page if there are no features available
	  for that kind of project.

2008-05-28  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: Fix a
	  NRE.
	* MonoDevelop.Ide.Templates/ProjectDescriptor.cs: Log some messages as
	  well as throwing up dialog boxes.

2008-05-28  Lluis Sanchez Gual <lluis@novell.com> 
