@@ -1657,5 +1657,9 @@
 		<CommandItem id = "MonoDevelop.Ide.Commands.FileTabCommands.CopyPathName" />
 		<CommandItem id = "MonoDevelop.Ide.Commands.FileTabCommands.ToggleMaximize" />
 	</Extension>
+	
+	<Extension path = "/MonoDevelop/Core/ExecutionModes">
+		<Mode id="Debug" _name="Debug" class="MonoDevelop.Ide.Debugging.DebugExecutionHandlerFactory"/>
+	</Extension>
 
 </Addin>
